# fastapi_template

./: README.md  pyproject.toml  students.json  utils.py
app/: main.py  models.py
tests/: conftest.py  test_basic.py  test_utils.py
